[package]
name = "analyzerl_boxcars"
version = "0.1.2"
edition = "2021"

[lib]
name = "_boxcars"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
arrow-array = "53"
arrow-schema = "53"
boxcars = "0.11.3"
csv = "1"
parquet = "53"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py310"] }
